manifests/cr/gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ext-host-gwy
spec:
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - example.otushomework
